[tool.poetry]
name = "pwh_pyramid_session"
version = "0.2.0"
description = "Session helpers for Pyramid"
authors = ["Mark Hall <mark.hall@work.room3b.eu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
decorator = "^4.4.2"
sqlalchemy = "^1.3.16"
pyramid_nacl_session = "^0.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.3.0"
flake8 = "^3.7.9"
flake8-print = "^3.1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
